<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuideMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">6degrees</string>
    <string name="subtitle">yay globalization</string>
    <string name="login_btn">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">email address</string>
    <string name="password_hint">password</string>
    <string name="none">You don\'t have any tours, create one to get started!</string>
    <string name="create">Create</string>
    <string name="new_where">Where do you want to visit?</string>
    <string name="next">Next \></string>
    <string name="new_where_hint">City, District, or Zip Code</string>
    <string name="current_location">Use Current Location</string>
    <string name="new_attractions">Any place you must visit?</string>
    <string name="new_attraction_hint">Eiffel Tower, Disneyland, Great Wall, etc.</string>
    <string name="add_new_attraction">+ Add another</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="bday">Birthday</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="year">year</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

</resources>
